# sportsml

./: .bumpversion.cfg  .bumpversion.toml  .dockerignore  .gitignore  .gitlab-ci.yml  .gitpod.yml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postStart.sh
docker/: Dockerfile  Dockerfile.base  Dockerfile.freeze  Dockerfile.prod
docker/cpu/: Dockerfile  Dockerfile.prod
docker/cuda/: Dockerfile  Dockerfile.prod
notebooks/: cbb-rf.ipynb  edge_conv.ipynb  evaluate.ipynb  heterograph-cfb.ipynb  heterograph-nba.ipynb  heterograph-nfl.ipynb  odds-baseline.ipynb  odds-evaluation.ipynb  pyg.ipynb  rf.ipynb  season-eval.ipynb  sklearn.ipynb
python/: pyproject.toml  requirements.txt
python/sportsml/: __init__.py
python/sportsml/cbb/data/: bracket.py  datamodule.py  dataset.py  download.py  features.py  utils.py
python/sportsml/cfb/data/: datamodule.py
python/sportsml/cli/: train.py  train_mlp.py
python/sportsml/cli/conf/: conf.yaml  mlp.yaml
python/sportsml/cli/conf/dm/: nba_game.yaml  nba_graph.yaml
python/sportsml/cli/conf/model/: gnn.yaml  graph_mlp.yaml  mlp.yaml
python/sportsml/cli/conf/trainer/: early_stopping.yaml  prod.yaml
python/sportsml/cli/predict/: predict.py
python/sportsml/cli/predict/conf/: conf.yaml
python/sportsml/layers/gnn/encoder/: gcn.py  heterogcn.py  mean.py  nn.py
python/sportsml/layers/gnn/predictor/: heteronn.py  nn.py
python/sportsml/models/: gnn.py  graph_mlp.py  mlp.py  rf.py
python/sportsml/mongo/: __init__.py  averages.py
python/sportsml/nba/data/: datamodule.py  download.py  features.py  nodes.py  utils.py
python/sportsml/nfl/data/: datamodule.py  utils.py
python/sportsml/odds/: utils.py
python/sportsml/utils/: datamodule.py  dataset.py  ensemble.py  heterograph.py  stats.py
scripts/: cbb.py  gcp-secrets.sh  pip-compile
src/sportsml/: __init__.py  cli.py
src/sportsml/cbb/data/: datamodule.py  download.py  features.py  nodes.py
src/sportsml/cfb/data/: datamodule.py  download.py  features.py
src/sportsml/cli/train/conf/model/encoder/: heteronn.yaml
src/sportsml/graph/: datamodule.py  dataset.py  fit.py  graph.py  model.py
src/sportsml/graph/nn/encoder/: edge_conv_encoder.py  edge_encoder.py  mean.py
src/sportsml/graph/nn/predictor/: ffn.py
src/sportsml/hydra/train/conf/model/predictor/: heteronn.yaml
src/sportsml/inference/: __init__.py  utils.py
src/sportsml/layers/gnn/encoder/: heterogcn.py  heteronn.py
src/sportsml/models/: rf.py  sklearn.py
src/sportsml/mongo/: __init__.py
src/sportsml/nba/data/: datamodule.py  download.py  features.py  utils.py
src/sportsml/nfl/data/: datamodule.py  download.py  features.py  names.py  utils.py
src/sportsml/odds/: client.py  utils.py
src/sportsml/utils/: features.py  process.py  stats.py
src/sportsml/wcbb/data/: download.py  nodes.py
