[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sportsml"
description = "ML for sports"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
version = "0.3.0.dev0"
dependencies = [
    "captum",
    "google-cloud-storage",
    "hydra-core",
    "httpx",
    "lightning",
    "nba_api",
    "networkx",
    "numpy",
    "mlflow",
    "pandas",
    "pyarrow",
    "pydantic",
    "pymongo",
    "requests",
    "scikit-learn",
    "seaborn",
    "torch",
    "torchmetrics",
]

[project.scripts]
cfb_mongo_upload = "sportsml.cfb.data.download:mongo_upload"
nba_mongo_upload = "sportsml.nba.data.download:mongo_upload"
nfl_mongo_upload = "sportsml.nfl.data.download:mongo_upload"
odds_upload = "sportsml.odds.utils:mongo_upload"
train = "sportsml.cli.train.train:train"
predict = "sportsml.cli.predict.predict:predict"