[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sportsml"
description = "ML for sports"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
version = "0.4.0.dev1"
dependencies = [
    "altair",
    "httpx",
    "jsonargparse",
    "lightning",
    "nba_api",
    "networkx",
    "numpy",
    "mlflow",
    "omegaconf",
    "pandas",
    "pyarrow",
    "pydantic",
    "pymongo",
    "scikit-learn",
    "seaborn",
    "torch",
    "torchmetrics",
]

[project.scripts]
sportsml = "sportsml.cli:cli"
cfb_mongo_upload = "sportsml.cfb.data.download:mongo_upload"
nba_mongo_upload = "sportsml.nba.data.download:mongo_upload"
nfl_mongo_upload = "sportsml.nfl.data.download:mongo_upload"
odds_upload = "sportsml.odds.utils:mongo_upload"
train = "sportsml.cli.train.train:train"
predict = "sportsml.cli.predict.predict:predict"

[project.optional-dependencies]
cpu = [
  "torch",
]
cu121 = [
  "torch",
]
cu124 = [
  "torch",
]
cu128 = [
  "torch",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" },
    { extra = "cu124" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`), and isort (`I`)
select = ["F", "E", "I"]