[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sportsml"
description = "ML for sports"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
version = "0.4.0.dev1"
dependencies = [
    "altair",
    "httpx",
    "ipywidgets",
    "jupyter",
    "jsonargparse[signatures]",
    "kaggle",
    "lightning",
    "nba_api",
    "networkx",
    "nflreadpy",
    "numpy",
    "mlflow",
    "omegaconf",
    "pandas",
    "pyarrow",
    "pydantic",
    "scikit-learn",
    "seaborn",
    "torch_geometric",
    "torchmetrics",
    "umap-learn",
    "wandb>=0.25.1",
    "weave>=0.52.36",
    "sbrscrape>=0.0.12",
]

[project.scripts]
sportsml = "sportsml.cli:cli"
cfb_mongo_upload = "sportsml.cfb.data.download:mongo_upload"
nba_mongo_upload = "sportsml.nba.data.download:mongo_upload"
nfl_mongo_upload = "sportsml.nfl.data.download:mongo_upload"
odds_upload = "sportsml.odds.utils:mongo_upload"
train = "sportsml.cli.train.train:train"
predict = "sportsml.cli.predict.predict:predict"

[project.optional-dependencies]
cu128 = [
  "torch",
]

[dependency-groups]
cpu = [
  "torch",
]

[tool.uv]
conflicts = [
  [
    { group = "cpu" },
    { extra = "cu128" },
  ],
]

default-groups = ["cpu"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", group = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`), and isort (`I`)
select = ["F", "E", "I"]
